mType/tests/testFiles/import/pass/modules/SameDirectoryModule.mt
class ExportedClass {
    var value: Int;

    constructor(val: Int) {
        this.value = val;
    }

    fun getValue(): Int {
        return this.value;
    }
}
